corrected product page spacing

--- a/front-end/src/Pages/Products/products.css
+++ b/front-end/src/Pages/Products/products.css
@@ -1,10 +1,3 @@
-.product-page {
-  max-width: 100%;
-  min-height: fit-content;
-  min-width: fit-content;
-  padding-bottom: 20%;
-}
-
 .products-cards {
   display: flex;
   flex-wrap: wrap;
